--- a/HTML.html
+++ b/HTML.html
@@ -10,14 +10,23 @@
     <div class ="header_menu">
     <div class ="header_item_center">
         <div class="item_left">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+            <span class="icon"_1>
+                <img class="image_icon_1" src="https://icon-library.com/images/three-bars-icon/three-bars-icon-28.jpg" alt="menu1_logo">
+
+            </span>
+
             </div>
+        <div class="item_right">
+            <span class="image_icon_2">
+                <img class="image_icon_2" src="shopping-cart_3916598.png" alt="menu2_logo">
+
+            </span>
+
+        </div>
     </div>
     </div>
 </header>
 
 
 </body>
-</html>
+</html><img src=".idea/shopping-cart_3916598.png" height="512" width="512"/>
