--- a/HTML.html
+++ b/HTML.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<header>
+<header class = "header">
     <div class ="header_menu">
-    <div class ="header_item_center">
-        <div class="item_left">
-            <span class="icon"_1>
-                <img class="image_icon_1" src="https://icon-library.com/images/three-bars-icon/three-bars-icon-28.jpg" alt="menu1_logo">
+        <div class="header_left">
+            <i class="fa-solid fa-bars logo-icon1"></i>
+        </div>
+    <div class ="header_center">
 
-            </span>
+      </div>
+        <div class="header_right">
+            <i class="fa-solid fa-bag-shopping logo-icon2"></i>
+        </div>
 
-            </div>
-        <div class="item_right">
-            <span class="image_icon_2">
-                <img class="image_icon_2" src="shopping-cart_3916598.png" alt="menu2_logo">
-
-            </span>
-
+    </div>
+    <div class ="header_bottom">
+        <div class="Search_container">
+            <input type="text" placeholder="Tìm kiếm sản phẩm..." class="search_input">
+            <button class="search_button">
+            <i class="fas fa-search"></i>
+            </button>
         </div>
     </div>
-    </div>
+
 </header>
 
 
 </body>
-</html><img src=".idea/shopping-cart_3916598.png" height="512" width="512"/>
