--- a/HTML.html
+++ b/HTML.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Thiên Lý shop</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -28,6 +28,28 @@
             </button>
         </div>
     </div>
+    <div class="menu_item">
+        <div class="item">Bút chì
+            <i class="fa-solid fa-pen item-icon"></i>
+        </div>
+        <div class="item">Văn phòng phẩm
+            <i class="fa-solid fa-newspaper item-icon"></i>
+        </div>
+        <div class="item">Dụng cụ học tập
+            <i class="fa-solid fa-compass-drafting"></i>
+        </div>
+        <div class="item">Mỹ thuật
+            <i class="fa-solid fa-palette"></i>
+        </div>
+        <div class="item">Giấy in
+            <i class="fa-solid fa-file-invoice"></i>
+        </div>
+        <div class="item">Sách
+            <i class="fa-solid fa-book"></i>
+        </div>
+
+    </div>
+
 
 </header>
 
