--- a/HTML.html
+++ b/HTML.html
@@ -14,7 +14,8 @@
         </div>
     <div class ="header_center">
 
-      </div>
+        <img class="Trademark_logo" src="ygngnpqc.png" height="400" width="500"/>
+    </div>
         <div class="header_right">
             <i class="fa-solid fa-bag-shopping logo-icon2"></i>
         </div>
