--- a/HTML.html
+++ b/HTML.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <footer  class="footer">
+        <div class="mid-footer">
+            <div class=" container">
+                 <div class="row">
+                     <div class="col-xs-12 col-sm-4 footer-click mt-4" >
+                         <div class=>
+                             <div class="about-company">
+                                 <p style="font-weight:bold;color:#fbe263">Thienly.vn - Website bán dụng cụ học tập Tập đoàn Thiên Lý</p>
+                                 <p style="color: #eaeef4">GPĐKKD số 03014648305 do Sở KHĐT TP. Hồ Chí Minh cấp ngày 21/10/2025.</p>
+                             </div>
+                             <p class="lina_patker">
+                                 <img loading="lazy" src="https://file.hstatic.net/1000230347/file/logo-parker_53d035f3ab7645168e62cd9e3f595090.png" alt="Paker">
+                             </p>
+                     </div>
+                     <div class="col-xs-12 col-md-6 col-lg-3 footer-click mt-4" >
+                         <p class="title menu">ĐỊA CHỈ CÔNG TY</p>
+                         <p>
+                             <b>Trụ sở chính</b>""
+                         </p>
+                         <p></p>
+                     </div>
+                     <div class="col-xs-12 col-md-6 col-lg-3 footer-click f-block f-support mt-4" ></div>
+                     <div class="col-xs-12 col-md-6 col-lg-2 footer-click mt-4"></div>
+                     </div>
+
+                 </div>
+
+            </div>
+
+        </div>
+    </footer>
+
 
 </body>
 </html>
