Thêm combobox cho danh mục sản phẩm

--- a/HTML.html
+++ b/HTML.html
@@ -30,23 +30,68 @@
         </div>
     </div>
     <div class="menu_item">
-        <div class="item">Bút chì
+        <div class="item">Bút viết
             <i class="fa-solid fa-pen item-icon"></i>
+            <div class="subitem_menu">
+                <a href class="subitem">Bút bi</a>
+                <a href class="subitem">Bút máy</a>
+                <a href class="subitem">Bút mực</a>
+                <a href class="subitem">Bút lông</a>
+                <a href class="subitem">Bút chì</a>
+
+
+
+            </div>
         </div>
         <div class="item">Văn phòng phẩm
             <i class="fa-solid fa-newspaper item-icon"></i>
+            <div class="subitem_menu">
+                <a href class="subitem">Máy tính bỏ túi</a>
+                <a href class="subitem">Keo dính</a>
+                <a href class="subitem">Dao rọc giấy</a>
+                <a href class="subitem">Băng keo</a>
+                <a href class="subitem">Kéo</a>
+            </div>
         </div>
         <div class="item">Dụng cụ học tập
             <i class="fa-solid fa-compass-drafting"></i>
+            <div class="subitem_menu">
+                <a href class="subitem">Thước-Bảng-Phấn</a>
+                <a href class="subitem">Balo Học Sinh</a>
+                <a href class="subitem">Compa</a>
+                <a href class="subitem">Hộp bút</a>
+                <a href class="subitem">Vở viết</a>
+            </div>
         </div>
         <div class="item">Mỹ thuật
             <i class="fa-solid fa-palette"></i>
+            <div class="subitem_menu">
+                <a href class="subitem">Màu sáp</a>
+                <a href class="subitem">Màu nước</a>
+                <a href class="subitem">Bút chì màu</a>
+                <a href class="subitem">Giấy vẽ</a>
+                <a href class="subitem">Cọ vẽ</a>
+            </div>
         </div>
         <div class="item">Giấy in
             <i class="fa-solid fa-file-invoice"></i>
+            <div class="subitem_menu">
+                <a href class="subitem">A0</a>
+                <a href class="subitem">A1</a>
+                <a href class="subitem">A2</a>
+                <a href class="subitem">A3</a>
+                <a href class="subitem">A4</a>
+            </div>
         </div>
         <div class="item">Sách
             <i class="fa-solid fa-book"></i>
+            <div class="subitem_menu">
+                <a href class="subitem">Sách học tiếng Anh</a>
+                <a href class="subitem">Sách thiếu nhi</a>
+                <a href class="subitem">Sách kinh tế</a>
+                <a href class="subitem">Sách văn học</a>
+                <a href class="subitem">Sách kĩ nang sống</a>
+            </div>
         </div>
 
     </div>
