--- a/HTML.html
+++ b/HTML.html
@@ -11,6 +11,9 @@
             <div class=" container">
                  <div class="row">
                      <div class="col-xs-12 col-sm-4 footer-click mt-4" >
+                         <div class="logo-footer" bis_skin_checked="1">
+                             <img loading="lazy" src="" alt="Thiên Long Shop">
+                         </div>
                          <div class=>
                              <div class="about-company">
                                  <p style="font-weight:bold;color:#fbe263">Thienly.vn - Website bán dụng cụ học tập Tập đoàn Thiên Lý</p>
@@ -19,9 +22,10 @@
                              <p class="line_patker">
                                  <img loading="lazy" src="https://file.hstatic.net/1000230347/file/logo-parker_53d035f3ab7645168e62cd9e3f595090.png" alt="Paker">
                              </p>
+                         </div>
                      </div>
                      <div class="col-xs-12 col-md-6 col-lg-3 footer-click mt-4" >
-                         <p class="title menu">ĐỊA CHỈ CÔNG TY</p>
+                         <p class="title menu clicked"> ĐỊA CHỈ CÔNG TY</p>
                          <p>
                              <b>Trụ sở chính</b>" Tầng 10, Sofic Tower, Số 10 Đường Mai Chí Thọ, Phường An Khánh, Thành Phố Hồ Chí Minh, Việt Nam"
                          </p>
@@ -30,7 +34,6 @@
                          </p>
                          <div class="certify-bct mt-3">
                              <img loading="lazy" src="//theme.hstatic.net/1000230347/1001380508/14/footer_bct.png?v=1075" alt="Chứng nhận bộ công thương" >
-                             </a>
                          </div>
                      </div>
                      <div class="col-xs-12 col-md-6 col-lg-3 footer-click f-block f-support mt-4" >
@@ -57,26 +60,25 @@
 
                          </ul>
                      </div>
-                     <div class="col-xs-12 col-md-6 col-lg-2 footer-click mt-4"></div>
+                     <div class="col-xs-12 col-md-6 col-lg-2 footer-click mt-4">
                       <p class="title-menu clicked"> VỀ THIENLY.VN</p>
                       <ul class="list-menu">
                           <li class="li_menu">
                           <a class="link" title="Giới thiệu">Giới thiệu</a></li>
                           <li class="li_menu">
-                              <a class="link" title="Chính sách bảo mật thông tin cá nhâ">Chính sách bảo mật thông tin cá nhâ</a></li>
+                              <a class="link" title="Chính sách bảo mật thông tin cá nhân">Chính sách bảo mật thông tin cá nhân</a></li>
                           <li class="li_menu">
-                              <a class="link" title="Thông tin liên ">Thông tin liên </a></li>
+                              <a class="link" title="Thông tin liên hệ ">Thông tin liên hệ </a></li>
                           <li class="li_menu">
                               <a class="link" title="Chương trình khuyến mãi">Chương trình khuyến mãi</a></li>
                           </ul>
-
+                     </div>
                      </div>
 
                  </div>
 
             </div>
 
-        </div>
     </footer>
 
 
