--- a/Hướng dẫn mua hàng.html
+++ b/Hướng dẫn mua hàng.html
@@ -13,14 +13,40 @@
                     <a1> Hướng dẫn mua hàng</a1>
                 </div>
                 <div class="b2">
-                    <h1>Cách 1</h1>
+                    <h1>Cách 1:Đặt hàng qua số Hotline</h1>
                     <p class="mb1">
-                        <b>Đặt hàng qua số Hotline</b>
+                        <b>*Cách hàng qua số Hotline</b>
                     </p>
                     <p class="mb1">-Gọi đến số Hotline:1900 8922 8313  </p>
                     <p class="mb1">-Thời gian tiếp nhận cuộc gọi mua hàng:</p>
                     <p class="mb1">+ Thứ 2 đến thứ 6 hàng tuần: từ 8h đến 17h  </p>
                     <p class="mb1">+Thứ 7 hàng tuần: từ 8h - 12h. </p>
+                </div>
+                <div class="b3">
+                    <h1>Cách 2:Đặt hàng trên web</h1>
+                    <p class="mb1">
+                        <b>Bước 1: Bạn có thể truy cập vào website www.thienly.vn và thực hiện chọn sản phẩm thông qua các cách đặt hàng đơn giản sau:</b>
+                    </p>
+                    <p>- Nhập thông tin khi đã biết sản phẩm vào ô tìm kiếm, bạn sẽ có kết quả ngay sau khi hoàn thành.</p>
+                    <p></p>
+                    <p>- Ấn vào các danh mục sản phẩm để tìm kiếm</p>
+                    <p></p>
+                    <p></p>
+                    <p>- Nếu bạn ở trang danh mục sản phẩm, bạn có thể ấn xem thứ bạn cần mua</p>
+                    <p></p>
+                    <p>- Sau đó bạn chọn số lượng sản phẩm muốn mua và thêm vào giỏ hàng.</p>
+                    <p></p>
+                    <p>- Hoặc bạn có thể ấn vào trang chi tiết sản phẩm.</p>
+                    <p>- Chọn số lượng và ấn nút Thêm vào giỏ để thêm sản phẩm vào giỏ. Hoặc bấm Mua ngay sau khi đã chọn xong các sản phẩm cần mua.</p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
+                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
+                    <p></p>
+                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
+
+
                 </div>
             </div>
         </div>
