--- a/Hướng dẫn mua hàng.html
+++ b/Hướng dẫn mua hàng.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="Hướng dẫn mua hàng style.css">
 </head>
-<body>
+  <body>
     <footer class="page-footer font-small blue pt-4">
         <div class="container">
             <div class="otg-mz4">
@@ -31,7 +31,9 @@
                     <p></p>
                     <p>- Ấn vào các danh mục sản phẩm để tìm kiếm</p>
                     <p></p>
-                    <p></p>
+                    <p>
+                        <b>Bước 2: Sau khi tìm được sản phẩm cần mua</b>
+                    </p>
                     <p>- Nếu bạn ở trang danh mục sản phẩm, bạn có thể ấn xem thứ bạn cần mua</p>
                     <p></p>
                     <p>- Sau đó bạn chọn số lượng sản phẩm muốn mua và thêm vào giỏ hàng.</p>
@@ -40,16 +42,16 @@
                     <p>- Chọn số lượng và ấn nút Thêm vào giỏ để thêm sản phẩm vào giỏ. Hoặc bấm Mua ngay sau khi đã chọn xong các sản phẩm cần mua.</p>
                     <p></p>
                     <p></p>
+                    <p>
+                        <b>Bước 3: Tại trang giỏ hàng</b>
+                    </p>
+                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
+                    <p>- Bạn có thể bấm Xóa một sản phẩm hoặc cập nhật lại số lượng của từng sản phẩm.</p>
                     <p></p>
-                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
-                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
-                    <p></p>
-                    <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
-
-
+                    <p>- Nếu có yêu cầu đặc biệt cho đơn hàng, bạn có thể ghi thông tin vào phần Ghi chú đơn hàng, nếu cần Xuất hóa đơn công ty, hãy check Xuất hóa đơn và điền chính xác thông tin.</p>
                 </div>
             </div>
         </div>
     </footer>
-</body>
+  </body>
 </html>
