--- a/html/sanPham.html
+++ b/html/sanPham.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Import file CSS tùy chỉnh -->
-    <link rel="stylesheet" href="../css/productDetail.css">
+    <link rel="stylesheet" href="../css/sanPham.css">
 </head>
 
 <body>
