Sửa lại phần giao diện chính và thêm giao diện chính sau khi người dùng đăng nhập vào

--- a/Forgot_Password_page.html
+++ b/Forgot_Password_page.html
@@ -23,7 +23,7 @@
 
         </div>
     <div class="row-4">
-        <a href="Login.html"><button type="button" class="Return">Quay lại</button></a>
+        <a href="Login.html"><button type="button" class="Return"><b>Quay lại</button></a>
 
     </div>
 </body>
