--- a/Login.html
+++ b/Login.html
@@ -26,11 +26,11 @@
 <a href="Forgot_Password_page.html" class="forgot-password">Quên mật khẩu?</a>
     </div>
     <div class="row-4">
-        <button type="button" class="Login_button">Đăng nhâp</button>
+        <a href="HasLogin-mainpage.html"><button type="button" class="Login_button">Đăng nhâp</button></a>
 
     </div>
     <div class="row-5">
-        <a href="">Chưa có tài khoản?</a>
+        <a href="Create_new_account.html" class="create_account">Chưa có tài khoản?</a>
     </div>
 </div>
 </body>
