--- a/HasLogin-mainpage.html
+++ b/HasLogin-mainpage.html
@@ -11,29 +11,29 @@
 <body>
 <header class="Custom-header">
     <div class-="container-fluid">
-    <div class="row">
-        <div class="col-auto d-flex align-items-center">
-            <img class="Trademark_logo" src="ygngnpqc.png" height="400" width="500"/>
-        </div>
-        <div class="col-lg-5 col-xl-6 mx-auto">
-            <form class="d-flex custom-search-form">
-                <input class="form-control form-control-lg custom-search-input" type="search" placeholder="Tìm kiếm sản phẩm..." aria-label="Search">
-                <button class="btn custom-search-btn" type="submit">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
-        </div>
-        <div class="col-auto">
-            <div class="text-white d-flex flex-column align-items-center custom-auth me-4">
-                <i class="fas fa-user-circle custom-icon-lg"></i>
-                <a href="Login.html" class="text-white text-decoration-none custom-link-text">Đăng nhập</a>
-                <a href="Create_new_account.html" class="text-white text-decoration-none custom-link-text">Đăng ký</a>
+        <div class="row">
+            <div class="col-auto d-flex align-items-center">
+                <img class="Trademark_logo" src="ygngnpqc.png" height="400" width="500"/>
             </div>
-            <div class="shopping_icon">
-                <i class="fas fa-shopping-bag"></i>
+            <div class="col-lg-5 col-xl-6 mx-auto">
+                <form class="d-flex custom-search-form">
+                    <input class="form-control form-control-lg custom-search-input" type="search" placeholder="Tìm kiếm sản phẩm..." aria-label="Search">
+                    <button class="btn custom-search-btn" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+            </div>
+            <div class="col-auto">
+                <div class="text-white d-flex flex-column align-items-center custom-auth me-4">
+                    <i class="fas fa-user-circle custom-icon-lg"></i>
+                    <div class="text-white text-decoration-none custom-link-text"><b>Xin chào</b></div>
+                    <a href="mainpage.html" class="text-white text-decoration-none custom-link-text">Đăng xuất</a>
+                </div>
+                <div class="shopping_icon">
+                    <i class="fas fa-shopping-bag"></i>
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <div class="container-fluid container-2">
         <div class="row">
