--- a/html/HTML.html
+++ b/html/HTML.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <footer  class="footer">
@@ -12,10 +12,10 @@
                  <div class="row">
                      <div class="col-xs-12 col-sm-4 footer-click mt-4" >
                          <div class="logo-footer" bis_skin_checked="1">
-                             <img loading="lazy" src="" alt="Thiên Long Shop">
+                             <img src="../remove-photos-background-removed.png" height="150" width="250"></img>
                          </div>
                          <div class=>
-                             <div class="about-company">
+                             <div class=" about-company">
                                  <p style="font-weight:bold;color:#fbe263">Thienly.vn - Website bán dụng cụ học tập Tập đoàn Thiên Lý</p>
                                  <p style="color: #eaeef4">GPĐKKD số 03014648305 do Sở KHĐT TP. Hồ Chí Minh cấp ngày 21/10/2025.</p>
                              </div>
