--- a/html/Hướng dẫn mua hàng.html
+++ b/html/Hướng dẫn mua hàng.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="Hướng dẫn mua hàng style.css">
+    <link rel="stylesheet" href="../Hướng%20dẫn%20mua%20hàng%20style.css">
 </head>
   <body>
     <footer class="page-footer font-small blue pt-4">
@@ -15,7 +15,7 @@
                 <div class="b2">
                     <h1>Cách 1:Đặt hàng qua số Hotline</h1>
                     <p class="mb1">
-                        <b>*Cách hàng qua số Hotline</b>
+                        <b>*Cách đặt hàng qua số Hotline</b>
                     </p>
                     <p class="mb1">-Gọi đến số Hotline:1900 8922 8313  </p>
                     <p class="mb1">-Thời gian tiếp nhận cuộc gọi mua hàng:</p>
@@ -40,7 +40,6 @@
                     <p></p>
                     <p>- Hoặc bạn có thể ấn vào trang chi tiết sản phẩm.</p>
                     <p>- Chọn số lượng và ấn nút Thêm vào giỏ để thêm sản phẩm vào giỏ. Hoặc bấm Mua ngay sau khi đã chọn xong các sản phẩm cần mua.</p>
-                    <p></p>
                     <p></p>
                     <p>
                         <b>Bước 3: Tại trang giỏ hàng</b>
