--- a/html/Dangky.html
+++ b/html/Dangky.html
@@ -2,36 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Đăng nhập</title>
+    <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="loginstyle.css">
-
+    <link rel="stylesheet" href="../css/Dangky.css">
 </head>
 <body>
 <div class="container">
-    <div class="row-1"><b>Đăng nhập<b/>
+    <div class="row-1"><b>Tạo tài khoản mới</b>
     </div>
     <div class="row-2">
         <div class="email">
-            <label  class="email-field">Tên đăng nhập</label>
+            <label  class="email-field">Email</label>
             <input type="text" class="form-control"  placeholder="">
         </div>
-        <div class="login">
-            <label  class="password-field">Mật khẩu</label>
+        <div class="user">
+            <label  class="user-field">Tên đăng nhập</label>
             <input type="text" class="form-control"  placeholder="">
+            <div class="password">
+                <label  class="password-field">Mật khẩu</label>
+                <input type="text" class="form-control"  placeholder="">
         </div>
-    </div>
-    <div class="row-3">
-<a href="Forgot_Password_page.html" class="forgot-password">Quên mật khẩu?</a>
-    </div>
-    <div class="row-4">
-        <a href="HasLogin-mainpage.html"><button type="button" class="Login_button">Đăng nhâp</button></a>
-
-    </div>
-    <div class="row-5">
-        <a href="Create_new_account.html" class="create_account">Chưa có tài khoản?</a>
-    </div>
+            <div class="row-3">
+                <button type="button" class="register_button">Đăng ký</button>
+            </div>
 </div>
 </body>
 </html>
