--- a/html/Dangnhap.html
+++ b/html/Dangnhap.html
@@ -2,28 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Đăng nhập</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Change_passwordstyle.css">
+    <link rel="stylesheet" href="../css/Dangnhap.css">
+
 </head>
 <body>
 <div class="container">
-    <div class="row-1">
-        <div class="new-password">
-            <label  class="new-password"><b>Mật khẩu mới</label>
-            <input type="text" class="form-control"  placeholder="">
-        </div>
-        <div class="confirm-new-password">
-            <label  class="confirm-new-password">Nhập mật khẩu mới</label>
-            <input type="text" class="form-control"  placeholder="">
-        </div>
+    <div class="row-1"><b>Đăng nhập<b/>
     </div>
     <div class="row-2">
-        <a href="Login.html"><button type="button" class="Confirm">Xác nhận</button></a>
+        <div class="email">
+            <label  class="email-field">Tên đăng nhập</label>
+            <input type="text" class="form-control"  placeholder="">
+        </div>
+        <div class="login">
+            <label  class="password-field">Mật khẩu</label>
+            <input type="text" class="form-control"  placeholder="">
+        </div>
+    </div>
+    <div class="row-3">
+<a href="Quenmatkhau.html" class="forgot-password">Quên mật khẩu?</a>
+    </div>
+    <div class="row-4">
+        <a href="Trangchinh-Dadangnhap.html"><button type="button" class="Login_button">Đăng nhâp</button></a>
 
     </div>
+    <div class="row-5">
+        <a href="Dangky.html" class="create_account">Chưa có tài khoản?</a>
+    </div>
 </div>
-
 </body>
 </html>
