--- a/html/Quenmatkhau.html
+++ b/html/Quenmatkhau.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Forgot_password_pagestyle.css">
+    <link rel="stylesheet" href="../css/Quenmatkhau.css">
 </head>
 <body>
 <div class="container">
@@ -18,12 +18,12 @@
         </div>
     </div>
         <div class="row-3">
-            <a href="Authentication.html" class="Get_authentication_code"><button type="button" class="Get_authentication_code_button"><b>Lấy mã xác nhận
+            <a href="Xacminh.html" class="Get_authentication_code"><button type="button" class="Get_authentication_code_button"><b>Lấy mã xác nhận
             </button></a>
 
         </div>
     <div class="row-4">
-        <a href="Login.html"><button type="button" class="Return"><b>Quay lại</button></a>
+        <a href="Dangnhap.html"><button type="button" class="Return"><b>Quay lại</button></a>
 
     </div>
 </body>
