--- a/html/Trangchinh.html
+++ b/html/Trangchinh.html
@@ -6,34 +6,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="mainpagestyle.css">
+    <link rel="stylesheet" href="../css/Trangchinh.css">
 </head>
 <body>
 <header class="Custom-header">
     <div class-="container-fluid">
-        <div class="row">
-            <div class="col-auto d-flex align-items-center">
-                <img class="Trademark_logo" src="ygngnpqc.png" height="400" width="500"/>
-            </div>
-            <div class="col-lg-5 col-xl-6 mx-auto">
-                <form class="d-flex custom-search-form">
-                    <input class="form-control form-control-lg custom-search-input" type="search" placeholder="Tìm kiếm sản phẩm..." aria-label="Search">
-                    <button class="btn custom-search-btn" type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
-            </div>
-            <div class="col-auto">
-                <div class="text-white d-flex flex-column align-items-center custom-auth me-4">
-                    <i class="fas fa-user-circle custom-icon-lg"></i>
-                    <div class="text-white text-decoration-none custom-link-text"><b>Xin chào</b></div>
-                    <a href="mainpage.html" class="text-white text-decoration-none custom-link-text">Đăng xuất</a>
-                </div>
-                <div class="shopping_icon">
-                    <i class="fas fa-shopping-bag"></i>
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-auto d-flex align-items-center">
+            <img class="Trademark_logo" src="../ygngnpqc.png" height="400" width="500"/>
         </div>
+        <div class="col-lg-5 col-xl-6 mx-auto">
+            <form class="d-flex custom-search-form">
+                <input class="form-control form-control-lg custom-search-input" type="search" placeholder="Tìm kiếm sản phẩm..." aria-label="Search">
+                <button class="btn custom-search-btn" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+        </div>
+        <div class="col-auto">
+            <div class="text-white d-flex flex-column align-items-center custom-auth me-4">
+                <i class="fas fa-user-circle custom-icon-lg"></i>
+                <a href="Dangnhap.html" class="text-white text-decoration-none custom-link-text">Đăng nhập</a>
+                <a href="Dangky.html" class="text-white text-decoration-none custom-link-text">Đăng ký</a>
+            </div>
+
+        </div>
+    </div>
     </div>
     <div class="container-fluid container-2">
         <div class="row">
