--- a/html/Hướng dẫn thanh toán.html
+++ b/html/Hướng dẫn thanh toán.html
@@ -13,7 +13,7 @@
                      <a>HƯỚNG DẪN THANH TOÁN</a>
                  </div>
                  <div class="c2">
-                     <b>  Bước 1:Ở phần phương thức thanh toán, cho phép bạn lựa chọn hình thức bạn sẽ thanh toán đơn hàng với chúng tôi, bao gồm:</b>
+                     <b>  Bước 1:Ở phần pm ,//  hương thức thanh toán, cho phép bạn lựa chọn hình thức bạn sẽ thanh toán đơn hàng với chúng tôi, bao gồm:</b>
 
                  </div>
              </div>
