--- a/html/thanhToan.html
+++ b/html/thanhToan.html
@@ -290,6 +290,11 @@
                                     <span>Tạm tính:</span>
                                     <strong>235,250đ</strong>
                                 </div>
+                                <!-- Giảm giá -->
+                                <div class="d-flex justify-content-between mb-2 text-success">
+                                    <span>Giảm giá:</span>
+                                    <strong>-11,762đ</strong>
+                                </div>
 
                                 <!-- Phí vận chuyển -->
                                 <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
