update lại giao diện

--- a/html/Dangky.html
+++ b/html/Dangky.html
@@ -13,18 +13,18 @@
     </div>
     <div class="row-2">
         <div class="email">
-            <label  class="email-field">Email</label>
+            <label  class="email-field"><b>Email</b></label>
             <input type="text" class="form-control"  placeholder="">
         </div>
         <div class="user">
-            <label  class="user-field">Tên đăng nhập</label>
+            <label  class="user-field"><b>Tên đăng nhập</b></label>
             <input type="text" class="form-control"  placeholder="">
             <div class="password">
-                <label  class="password-field">Mật khẩu</label>
+                <label  class="password-field"><b>Mật khẩu</b></label>
                 <input type="text" class="form-control"  placeholder="">
         </div>
             <div class="row-3">
-                <button type="button" class="register_button">Đăng ký</button>
+                <button type="button" class="register_button"><b>Đăng ký</b></button>
             </div>
 </div>
 </body>
