--- a/html/Dangnhap.html
+++ b/html/Dangnhap.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 <div class="container">
-    <div class="row-1"><b>Đăng nhập<b/>
+    <div class="row-1"><b>Đăng nhập</b>
     </div>
     <div class="row-2">
         <div class="email">
-            <label  class="email-field">Tên đăng nhập</label>
+            <label  class="email-field"><b>Tên đăng nhập</b></label>
             <input type="text" class="form-control"  placeholder="">
         </div>
         <div class="login">
-            <label  class="password-field">Mật khẩu</label>
+            <label  class="password-field"><b>Mật khẩu</b></label>
             <input type="text" class="form-control"  placeholder="">
         </div>
     </div>
@@ -26,7 +26,7 @@
 <a href="Quenmatkhau.html" class="forgot-password">Quên mật khẩu?</a>
     </div>
     <div class="row-4">
-        <a href="Trangchinh-Dadangnhap.html"><button type="button" class="Login_button">Đăng nhâp</button></a>
+        <a href="Trangchinh-Dadangnhap.html"><button type="button" class="Login_button"><b>Đăng nhập</b></button></a>
 
     </div>
     <div class="row-5">
