--- a/html/Doimatkhau.html
+++ b/html/Doimatkhau.html
@@ -15,12 +15,12 @@
             <input type="text" class="form-control"  placeholder="">
         </div>
         <div class="confirm-new-password">
-            <label  class="confirm-new-password">Nhập mật khẩu mới</label>
+            <label  class="confirm-new-password">Xác nhận mật khẩu mới</label>
             <input type="text" class="form-control"  placeholder="">
         </div>
     </div>
     <div class="row-2">
-        <a href="Dangnhap.html"><button type="button" class="Confirm">Xác nhận</button></a>
+        <a href="Dangnhap.html"><button type="button" class="Confirm"><b>Xác nhận</b></button></a>
 
     </div>
 </div>
