--- a/html/Quenmatkhau.html
+++ b/html/Quenmatkhau.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="row-1"><b>Quên mật khẩu
+    <div class="row-1"><b>Quên mật khẩu</b>
     </div>
     <div class="row-2">
         <div class="Forgot_password_field">
