thêm logo vào header , chỉnh lại phần tìm kiếm

--- a/html/index.html
+++ b/html/index.html
@@ -31,6 +31,9 @@
     <!-- Import file CSS tùy chỉnh của website -->
     <link rel="stylesheet" href="../css/index.css">
 </head>
+
+<body>
+<!-- ==================== PHẦN HEADER ==================== -->
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <!-- navbar: Thanh điều hướng chính của website -->
@@ -40,7 +43,8 @@
              <!-- container-fluid: Container chiếm 100% chiều rộng -->
             <a class="navbar-brand fw-bold" href="index.html">
                 <!-- fw-bold: Font-weight bold (chữ đậm) -->
-                <i class="fas fa-store" style="color: #003da5;"></i> Thiên Lý
+                <img class="Trademark_logo" src="remove-photos-background-removed (2).png" height="70" width="80" alt="Thiên Lý Logo" />
+                <span class="brand-name-simple">Thiên Lý</span>
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -83,10 +87,6 @@
         </div>
     </nav>
 </header>
-
-
-<body>
-
 
     <!-- ==================== PHẦN DANH MỤC SẢN PHẨM ==================== -->
     <section class="categories-section py-5">
