--- a/html/Hướng dẫn thanh toán.html
+++ b/html/Hướng dẫn thanh toán.html
@@ -13,9 +13,20 @@
                      <a>HƯỚNG DẪN THANH TOÁN</a>
                  </div>
                  <div class="c2">
-                     <b>  Bước 1:Ở phần pm ,//  hương thức thanh toán, cho phép bạn lựa chọn hình thức bạn sẽ thanh toán đơn hàng với chúng tôi, bao gồm:</b>
-
+                     <b>  Bước 1:Ở phần phương thức thanh toán, cho phép bạn lựa chọn hình thức bạn sẽ thanh toán đơn hàng với chúng tôi, bao gồm:</b>
+                     <p class="mb1">- Thanh toán khi giao hàng (COD): bạn sẽ chỉ thanh toán tiền khi nhân viên giao hàng của chúng tôi giao hàng cho bạn.</p>
+                     <p class="mb1">- Chuyển khoản qua ngân hàng: bạn sẽ thanh toán tiền trước cho chúng tôi bằng cách gửi tiền (internet banking hoặc gửi ở ngân hàng) vào thông tin tài khoản đính kèm bên dưới.</p>
+                     <p class="mb1">- Thanh toán qua cổng thứ 3: bạn sẽ thanh toán tiền trước cho chúng tôi thông qua thẻ ATM (đã kích hoạt internet banking) hoặc thẻ Visa/Master hoặc Ví điện tử VNPay/ Momo.</p>
+                     <p >
+                         <img src="../z7260964431924_7ecff26aa683c1cfb4f011864a3fc923.jpg" height="300" width="600" ></img>
+                     </p>
                  </div>
+                 <div class="c3">
+                     <b>Bước 2: Hãy nhập mã giảm giá nếu bạn có, để được hưởng các chính sách khuyến mãi ngay lập tức trên đơn hàng của bạn.</b>
+                     <p>
+                         <img src="../z7261051257776_e1835f5d48d82f35fd61235900ff9d1c.jpg" height="500" width="300"/></p>
+                 </div>
+                 <div class="c4"></div>
              </div>
          </div>
      </footer>
