--- a/html/Hướng dẫn mua hàng.html
+++ b/html/Hướng dẫn mua hàng.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../Hướng%20dẫn%20mua%20hàng%20style.css">
+    <link rel="stylesheet" href="../css/Hướng dẫn mua hàng style.css">
 </head>
   <body>
     <footer class="page-footer font-small blue pt-4">
         <div class="container">
             <div class="otg-mz4">
                 <div class="b1">
-                    <a1> Hướng dẫn mua hàng</a1>
+                    <h1 > Hướng dẫn mua hàng</h1>
                 </div>
                 <div class="b2">
                     <h1>Cách 1:Đặt hàng qua số Hotline</h1>
