--- a/html/Hướng dẫn thanh toán.html
+++ b/html/Hướng dẫn thanh toán.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../Hướng%20dẫn%20thanh%20toán.css">
+    <link rel="stylesheet" href="../css/Hướng dẫn thanh toán.css">
 </head>
  <body>
      <footer class="col-st-n4">
          <div class="container">
              <div class="row">
                  <div class="c1">
-                     <a>HƯỚNG DẪN THANH TOÁN</a>
+                     <h1 class="title">HƯỚNG DẪN THANH TOÁN </h1>
                  </div>
                  <div class="c2">
                      <b>  Bước 1:Ở phần phương thức thanh toán, cho phép bạn lựa chọn hình thức bạn sẽ thanh toán đơn hàng với chúng tôi, bao gồm:</b>
@@ -26,7 +26,14 @@
                      <p>
                          <img src="../z7261051257776_e1835f5d48d82f35fd61235900ff9d1c.jpg" height="500" width="300"/></p>
                  </div>
-                 <div class="c4"></div>
+                 <div class="c4">
+                     <b>Bước 3:Xác nhận xem đúng đơn hàng và giá tiền mình đã áp mã giảm giá chưa </b>
+                     <p>
+                         <img src="../z7261053690765_79f947894811bd22790be2d88bd683bd.jpg" height="600" width="300"/></p>
+                 </div>
+                 <div class="c5">
+                     <b>Bước 4:Ấn hoàn tất đơn hàng để hoàn thành đặt hàng. Sau khi bạn đặt hàng xong, chúng tôi sẽ có nhân viên gọi điện lại để xác nhận đơn hàng với bạn.</b>
+                 </div>
              </div>
          </div>
      </footer>
