--- a/html/footer.html
+++ b/html/footer.html
@@ -9,7 +9,7 @@
     <footer  class="footer">
         <div class="mid-footer">
             <div class=" container">
-                 <div class="row">
+                 <div class="rows">
                      <div class="col-xs-12 col-sm-4 footer-click mt-4" >
                          <div class="logo-footer" bis_skin_checked="1">
                              <img src="../remove-photos-background-removed.png" height="150" width="250"></img>
