--- a/html/thanhToan.html
+++ b/html/thanhToan.html
@@ -331,4 +331,78 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
 </body>
+<footer  class="footer">
+    <div class="mid-footer">
+        <div class=" container">
+            <div class="rows">
+                <div class="col-xs-12 col-sm-4 footer-click mt-4" >
+                    <div class="logo-footer" bis_skin_checked="1">
+                        <img src="../remove-photos-background-removed.png" height="150" width="250"></img>
+                    </div>
+                    <div class=>
+                        <div class=" about-company">
+                            <p style="font-weight:bold;color:#fbe263">Thienly.vn - Website bán dụng cụ học tập Tập đoàn Thiên Lý</p>
+                            <p style="color: #eaeef4">GPĐKKD số 03014648305 do Sở KHĐT TP. Hồ Chí Minh cấp ngày 21/10/2025.</p>
+                        </div>
+                        <p class="line_patker">
+                            <img loading="lazy" src="https://file.hstatic.net/1000230347/file/logo-parker_53d035f3ab7645168e62cd9e3f595090.png" alt="Paker">
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 footer-click mt-4" >
+                    <p class="title menu clicked"> ĐỊA CHỈ CÔNG TY</p>
+                    <p>
+                        <b>Trụ sở chính</b>" Tầng 10, Sofic Tower, Số 10 Đường Mai Chí Thọ, Phường An Khánh, Thành Phố Hồ Chí Minh, Việt Nam"
+                    </p>
+                    <p>
+                        <b>Miền Bắc</b>" Số 38, đường Gamuda Gardens 2-5, Khu đô thị mới C2 - Gamuda Gardens, Phường Trần Phú, Thành phố Hà Nội, Việt Nam."
+                    </p>
+                    <div class="certify-bct mt-3">
+                        <img loading="lazy" src="//theme.hstatic.net/1000230347/1001380508/14/footer_bct.png?v=1075" alt="Chứng nhận bộ công thương" >
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 footer-click f-block f-support mt-4" >
+                    <p class="title-menu clicked"> CHĂM SÓC KHÁCH HÀNG</p>
+                    <p>Hotline 1900 8922 8313</p>
+                    <p>Thứ 2 - Thứ 6 (8h - 17h)</p>
+                    <ul class ="list-menu">
+                        <li class="li_menu">
+
+                            <a class="link" title="Hướng dẫn mua hàng"> Hướng dẫn mua hàng</a>
+                        </li>
+                        <li class="li_menu">
+
+                            <a class="link" title="Hướng dẫn thanh toán"> Hướng dẫn thanh toán</a>
+                        </li>
+                        <li class="li_menu">
+
+                            <a class="link" title="Chính sách đổi trả & hoàn tiền"> Chính sách đổi trả & hoàn tiền</a>
+                        </li>
+                        <li class="li_menu">
+
+                            <a class="link" title="Phản ánh chất lượng sản phẩm"> Phản ánh chất lượng sản phẩm</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-2 footer-click mt-4">
+                    <p class="title-menu clicked"> VỀ THIENLY.VN</p>
+                    <ul class="list-menu">
+                        <li class="li_menu">
+                            <a class="link" title="Giới thiệu">Giới thiệu</a></li>
+                        <li class="li_menu">
+                            <a class="link" title="Chính sách bảo mật thông tin cá nhân">Chính sách bảo mật thông tin cá nhân</a></li>
+                        <li class="li_menu">
+                            <a class="link" title="Thông tin liên hệ ">Thông tin liên hệ </a></li>
+                        <li class="li_menu">
+                            <a class="link" title="Chương trình khuyến mãi">Chương trình khuyến mãi</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</footer>
 </html>
