--- a/html/Dangnhap.html
+++ b/html/Dangnhap.html
@@ -26,7 +26,7 @@
 <a href="Quenmatkhau.html" class="forgot-password">Quên mật khẩu?</a>
     </div>
     <div class="row-4">
-        <a href="Trangchinh-Dadangnhap.html"><button type="button" class="Login_button">Đăng nhâp</button></a>
+        <a href="index.html"><button type="button" class="Login_button">Đăng nhâp</button></a>
 
     </div>
     <div class="row-5">
