--- a/html/Hướng dẫn mua hàng.html
+++ b/html/Hướng dẫn mua hàng.html
@@ -28,9 +28,9 @@
                         <b>Bước 1: Bạn có thể truy cập vào website www.thienly.vn và thực hiện chọn sản phẩm thông qua các cách đặt hàng đơn giản sau:</b>
                     </p>
                     <p>- Nhập thông tin khi đã biết sản phẩm vào ô tìm kiếm, bạn sẽ có kết quả ngay sau khi hoàn thành.</p>
-                    <p></p>
+                    <p><img src="../Screenshot 2025-11-28 130132.png" height="300" width="600"/></p>
                     <p>- Ấn vào các danh mục sản phẩm để tìm kiếm</p>
-                    <p></p>
+                    <p><img src="../Screenshot 2025-11-28 134118.png" height="300" width="600"/></p>
                     <p>
                         <b>Bước 2: Sau khi tìm được sản phẩm cần mua</b>
                     </p>
