--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
             </button>
             
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                
+                <!-- thanh tim kiem -->
                 <form class="d-flex align-items-center me-3 my-2 my-lg-0">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Tìm kiếm..." id="searchInput" style="width: 600px;">
