--- a/html/Hướng dẫn mua hàng.html
+++ b/html/Hướng dẫn mua hàng.html
@@ -37,7 +37,7 @@
                     <p>- Nếu bạn ở trang danh mục sản phẩm, bạn có thể ấn xem thứ bạn cần mua</p>
                     <p></p>
                     <p>- Sau đó bạn chọn số lượng sản phẩm muốn mua và thêm vào giỏ hàng.</p>
-                    <p></p>
+                    <p><img src="../Screenshot 2025-11-28 135749.png" height="300" width="600"/></p>
                     <p>- Hoặc bạn có thể ấn vào trang chi tiết sản phẩm.</p>
                     <p>- Chọn số lượng và ấn nút Thêm vào giỏ để thêm sản phẩm vào giỏ. Hoặc bấm Mua ngay sau khi đã chọn xong các sản phẩm cần mua.</p>
                     <p></p>
@@ -46,7 +46,7 @@
                     </p>
                     <p>- Tại trang giỏ hàng, bạn có thể xem lại số lượng và số sản phẩm bạn cần mua đã đúng và đủ chưa.</p>
                     <p>- Bạn có thể bấm Xóa một sản phẩm hoặc cập nhật lại số lượng của từng sản phẩm.</p>
-                    <p></p>
+                    <p><img src="../Screenshot 2025-11-28 135921.png" height="300" width="600"/></p>
                     <p>- Nếu có yêu cầu đặc biệt cho đơn hàng, bạn có thể ghi thông tin vào phần Ghi chú đơn hàng, nếu cần Xuất hóa đơn công ty, hãy check Xuất hóa đơn và điền chính xác thông tin.</p>
                 </div>
             </div>
