--- a/html/Listproducts.html
+++ b/html/Listproducts.html
@@ -24,7 +24,7 @@
     <!-- link Font Awesome: Dùng để hiển thị icon như <i class="fas fa-filter"></i> -->
     
     <!-- Import file CSS tùy chỉnh -->
-    <link rel="stylesheet" href="../css/danhSachSanPham.css">
+    <link rel="stylesheet" href="../css/Listproducts.css">
     <!-- file CSS riêng: chứa style cho trang danh sách sản phẩm -->
 </head>
 
@@ -38,7 +38,7 @@
         <!-- navbar-expand-lg: Menu sẽ hiển thị dạng ngang trên màn hình lớn, thu gọn thành hamburger menu trên màn hình nhỏ -->
         <div class="container-fluid">
              <!-- container-fluid: Container chiếm 100% chiều rộng -->
-            <a class="navbar-brand fw-bold" href="index.html">
+            <a class="navbar-brand fw-bold" href="Mainpage.html">
                 <!-- fw-bold: Font-weight bold (chữ đậm) -->
                 <img class="Trademark_logo" src="remove-photos-background-removed (2).png" height="70" width="80" alt="Thiên Lý Logo" />
                 <span class="brand-name-simple">Thiên Lý</span>
@@ -61,21 +61,18 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Trang chủ</a>
+                        <a class="nav-link active" href="Mainpage.html">Trang chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="danhSachSanPham.html">Sản phẩm</a>
+                        <a class="nav-link" href="Listproducts.html">Sản phẩm</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="lien_he.html">Liên hệ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gioHang.html">
+                        <a class="nav-link" href="Cart.html">
                             <i class="fas fa-shopping-cart"></i> Giỏ hàng
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Dangnhap.html">
+                        <a class="nav-link" href="Login.html">
                             <i class="fas fa-user"></i> Đăng nhập
                         </a>
                     </li>
@@ -91,7 +88,7 @@
             <nav aria-label="breadcrumb" class="mb-4">
                 <!-- Breadcrumb: Đường dẫn hiện tại -->
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                    <li class="breadcrumb-item"><a href="Mainpage.html">Trang chủ</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Sản phẩm</li>
                 </ol>
             </nav>
@@ -394,7 +391,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">12,000đ</span>
                                             <span class="new-price text-danger"><strong>10,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -422,7 +419,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">90,000đ</span>
                                             <span class="new-price text-danger"><strong>63,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -449,7 +446,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">856,000đ</span>
                                             <span class="new-price text-danger"><strong>570,250đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -477,7 +474,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">120,000đ</span>
                                             <span class="new-price text-danger"><strong>66,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -505,7 +502,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">5,000đ</span>
                                             <span class="new-price text-danger"><strong>4,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -532,7 +529,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">15,000đ</span>
                                             <span class="new-price text-danger"><strong>12,750đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -558,7 +555,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">14,000đ</span>
                                             <span class="new-price text-danger"><strong>12,600đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -586,7 +583,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">150,000đ</span>
                                             <span class="new-price text-danger"><strong>135,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -614,7 +611,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">25,000đ</span>
                                             <span class="new-price text-danger"><strong>18,750đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -641,7 +638,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">20,000đ</span>
                                             <span class="new-price text-danger"><strong>16,400đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -669,7 +666,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">50,000đ</span>
                                             <span class="new-price text-danger"><strong>44,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -696,7 +693,7 @@
                                             <span class="old-price text-decoration-line-through text-muted">50,000đ</span>
                                             <span class="new-price text-danger"><strong>36,000đ</strong></span>
                                         </div>
-                                        <a href="sanPham.html" class="btn btn-sm btn-primary w-100">
+                                        <a href="ProductDetail.html" class="btn btn-sm btn-primary w-100">
                                             <i class="fas fa-eye"></i> Xem chi tiết
                                         </a>
                                     </div>
@@ -809,11 +806,11 @@
                     <ul class ="list-menu">
                         <li class="li_menu">
 
-                            <a class="link" title="Hướng dẫn mua hàng"> Hướng dẫn mua hàng</a>
+                            <a href="Shopinghelp.html" class="link" title="Hướng dẫn mua hàng"> Hướng dẫn mua hàng</a>
                         </li>
                         <li class="li_menu">
 
-                            <a class="link" title="Hướng dẫn thanh toán"> Hướng dẫn thanh toán</a>
+                            <a href="Paymenthelp.html" class="link" title="Hướng dẫn thanh toán"> Hướng dẫn thanh toán</a>
                         </li>
                         <li class="li_menu">
 
