--- a/html/CreateNewPassword.html
+++ b/html/CreateNewPassword.html
@@ -5,27 +5,25 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/Dangky.css">
+    <link rel="stylesheet" href="../css/CreateNewPassword.css">
 </head>
 <body>
 <div class="container">
-    <div class="row-1"><b>Tạo tài khoản mới</b>
+    <div class="row-1">
+        <div class="new-password">
+            <label  class="new-password"><b>Mật khẩu mới</label>
+            <input type="text" class="form-control"  placeholder="">
+        </div>
+        <div class="confirm-new-password">
+            <label  class="confirm-new-password">Xác nhận mật khẩu mới</label>
+            <input type="text" class="form-control"  placeholder="">
+        </div>
     </div>
     <div class="row-2">
-        <div class="email">
-            <label  class="email-field"><b>Email</b></label>
-            <input type="text" class="form-control"  placeholder="">
-        </div>
-        <div class="user">
-            <label  class="user-field"><b>Tên đăng nhập</b></label>
-            <input type="text" class="form-control"  placeholder="">
-            <div class="password">
-                <label  class="password-field"><b>Mật khẩu</b></label>
-                <input type="text" class="form-control"  placeholder="">
-        </div>
-            <div class="row-3">
-                <button type="button" class="register_button"><b>Đăng ký</b></button>
-            </div>
+        <a href="Login.html"><button type="button" class="Confirm"><b>Xác nhận</b></button></a>
+
+    </div>
 </div>
+
 </body>
 </html>
