--- a/html/Paymenthelp.html
+++ b/html/Paymenthelp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/Hướng dẫn thanh toán.css">
+    <link rel="stylesheet" href="../css/Paymenthelp.css">
 </head>
  <body>
      <footer class="col-st-n4">
@@ -18,18 +18,15 @@
                      <p class="mb1">- Chuyển khoản qua ngân hàng: bạn sẽ thanh toán tiền trước cho chúng tôi bằng cách gửi tiền (internet banking hoặc gửi ở ngân hàng) vào thông tin tài khoản đính kèm bên dưới.</p>
                      <p class="mb1">- Thanh toán qua cổng thứ 3: bạn sẽ thanh toán tiền trước cho chúng tôi thông qua thẻ ATM (đã kích hoạt internet banking) hoặc thẻ Visa/Master hoặc Ví điện tử VNPay/ Momo.</p>
                      <p >
-                         <img src="../z7260964431924_7ecff26aa683c1cfb4f011864a3fc923.jpg" height="300" width="600" ></img>
                      </p>
                  </div>
                  <div class="c3">
                      <b>Bước 2: Hãy nhập mã giảm giá nếu bạn có, để được hưởng các chính sách khuyến mãi ngay lập tức trên đơn hàng của bạn.</b>
                      <p>
-                         <img src="../z7261051257776_e1835f5d48d82f35fd61235900ff9d1c.jpg" height="500" width="300"/></p>
                  </div>
                  <div class="c4">
                      <b>Bước 3:Xác nhận xem đúng đơn hàng và giá tiền mình đã áp mã giảm giá chưa </b>
                      <p>
-                         <img src="../z7261053690765_79f947894811bd22790be2d88bd683bd.jpg" height="600" width="300"/></p>
                  </div>
                  <div class="c5">
                      <b>Bước 4:Ấn hoàn tất đơn hàng để hoàn thành đặt hàng. Sau khi bạn đặt hàng xong, chúng tôi sẽ có nhân viên gọi điện lại để xác nhận đơn hàng với bạn.</b>
